Light THeme Option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <title>Undervalued Estate</title>
     <meta name="description" content="Discover undervalued real estate deals vs market benchmarks." />
     <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="mask-icon" href="/favicon.svg" color="#38bdf8" />
   </head>
   <body>
     <div id="root"></div>
