--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,18 @@
     <link rel="icon" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="mask-icon" href="/favicon.svg" color="#38bdf8" />
+    <script>
+      (function(){
+        try{
+          var t = localStorage.getItem('theme');
+          if (t === 'light' || t === 'dark') {
+            document.documentElement.setAttribute('data-theme', t);
+          } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
+            document.documentElement.setAttribute('data-theme', 'light');
+          }
+        }catch(e){}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
